Stopped working on the question aspect, I did restyle the boxes to make everything look better. Worked on the timer function, as I felt like it would wwrap everything firstly, and I do think I am correct. If timer hits 0, the quiz indeed now ends too. Committing because I want to change one of the functions entirely

--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -93,13 +93,16 @@ a:visited {
 }
 
 .question-list {
-    background-color: rgb(112, 112, 200);
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: space-around;
     align-items: center;
+    min-height: 200px;
 }
 
-.question-list li {
+.question-list button {
     list-style-type: none;
+    padding: 15px 10px;
+    width: 100%;
+    margin: 10px 0;
 }
